--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -34,6 +34,15 @@
   width: 200px;
   color: #ffffff;
 }
+.memory{
+  background: rgba(9, 44, 81, .6);
+    position: absolute;
+    right: 0;
+    top: 100px;
+    bottom: 0;
+    width: 200px;
+    color: #ffffff;
+}
 .blockchain{
   background: rgba(9, 44, 81, .6);
   position: absolute;
@@ -55,5 +64,6 @@
     background-color: #ffffff;
     width: 50px;
   }
+  
 }
 
