--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -27,12 +27,16 @@
 
 .text {
   background: rgba(9, 44, 81, .6);
+  padding: 24px 0 ;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 100px;
   bottom: 0;
   width: 200px;
   color: #ffffff;
+  &>div{
+    margin: 0 0 24px 0;
+  }
 }
 .memory{
   background: rgba(9, 44, 81, .6);
@@ -42,28 +46,53 @@
     bottom: 0;
     width: 200px;
     color: #ffffff;
+    flex-direction: column;
+    &>div{
+      flex:1;
+      flex-direction: column;
+    }
 }
-.blockchain{
+.blockchains{
   background: rgba(9, 44, 81, .6);
   position: absolute;
-  left: 200px;
+  left: 0;
   top: 0;
   right: 0;
   height: 100px;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  .block{
-    height: 50px;
-    width: 50px;
-    line-height: 50px;
-    text-align: center;
-    background-color: #ffffff;
+  .blockchain{
+
+    justify-content: center;
+    align-items: center;
+    .block{
+      height: 50px;
+      width: 50px;
+      line-height: 50px;
+      text-align: center;
+      background-color: #ffffff;
+    }
+    .line{
+      height: 1px;
+      background-color: #ffffff;
+      width: 50px;
+    }
+    
   }
-  .line{
-    height: 1px;
-    background-color: #ffffff;
-    width: 50px;
-  }
-  
 }
+.buttonsType{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100px;
+  z-index: 100;
+  opacity: 0;
+  transition: opacity 0.28s;
+  &:hover{
+    opacity: 1;
+  }
+}
+
+
 
